# volang

./: .gitignore  Cargo.toml  README.md  agent.md  d.py  d_py.py  main.vob  rust-toolchain.toml  vo.work
.cargo/: config.toml
cmd/bench/: Cargo.toml
cmd/bench/src/: main.rs
cmd/vo-dev/: Cargo.toml
cmd/vo-dev/src/: artifact_lint.rs  artifact_repo_lint.rs  ci_system.rs  command_lint.rs  config.rs  dev_bench.rs  dev_clean.rs  dev_common.rs  dev_gc_perf.rs  dev_loc.rs  dev_studio.rs  dpy_compat.rs  first_party.rs  github_output.rs  glob.rs  lint_policy.rs  lint_system.rs  main.rs  node_audit.rs  release_archive.rs  release_config.rs  release_homebrew.rs  release_identity.rs  release_sdk.rs  release_system.rs  task_graph.rs  task_planner.rs  task_runner.rs  task_system.rs  test_config.rs  test_format.rs  test_manifest.rs  test_plan.rs  test_runner.rs  test_system.rs  tool_lint.rs  tool_system.rs  verify_system.rs
cmd/vo-dev/src/lint_system/: tests.rs
cmd/vo-embed/: Cargo.toml
cmd/vo-embed/src/: main.rs
cmd/vo-test/: Cargo.toml  README.md  config.vo  files.vo  main.vo  runner.vo  vo.mod
cmd/vo-test/.vo-cache/: extensions  module.voc  mtime
cmd/vo-test/rust/: Cargo.toml
cmd/vo-test/rust/src/: main.rs
cmd/vo-test/src/: main.rs
crates/gox-analysis/: Cargo.toml  README.md
crates/gox-analysis/src/: arena.rs  check.rs  collect.rs  constant.rs  display.rs  errors.rs  importer.rs  lib.rs  lookup.rs  obj.rs  objects.rs  operand.rs  package.rs  project.rs  query.rs  resolve.rs  scope.rs  selection.rs  typ.rs  type_interner.rs  types.rs  universe.rs
crates/gox-analysis/src/check/: assignment.rs  builtin.rs  call.rs  checker.rs  conversion.rs  decl.rs  errors.rs  escape.rs  expr.rs  format.rs  initorder.rs  interface.rs  label.rs  mod.rs  resolver.rs  returns.rs  stmt.rs  tests.rs  type_info.rs  typexpr.rs  util.rs
crates/gox-aot/: Cargo.toml
crates/gox-aot/src/: compiler.rs  lib.rs
crates/gox-aot/tests/: e2e.rs
crates/gox-cli/: Cargo.toml  README.md
crates/gox-cli/src/: bytecode_tests.rs  bytecode_text.rs  lib.rs  main.rs  printer.rs
crates/gox-cli/src/commands/: build.rs  check.rs  compile.rs  dump.rs  get.rs  init.rs  mod.rs  run.rs
crates/gox-codegen-cranelift/: Cargo.toml
crates/gox-codegen-cranelift/src/: context.rs  lib.rs  runtime.rs  translate.rs
crates/gox-jit/: Cargo.toml
crates/gox-jit/src/: jit.rs  lib.rs
crates/gox-jit/tests/: e2e.rs
crates/gox-runtime-core/: Cargo.toml
crates/gox-runtime-core/src/: api.rs  ffi.rs  gc.rs  lib.rs  objects.rs
crates/gox-runtime-core/src/builtins/: base64.rs  bytes.rs  hex.rs  json.rs  sort.rs  strings.rs  unicode.rs
crates/gox-runtime-core/src/stdlib/: json.rs  mod.rs
crates/gox-runtime-vm/: Cargo.toml
crates/gox-runtime-vm/src/: context.rs  lib.rs
crates/gox-runtime-vm/src/extern_fn/: base64.rs  builtin.rs  bytes.rs  hex.rs  json.rs  math.rs  mod.rs  regexp.rs  sort.rs  strconv.rs  strings.rs  unicode.rs
crates/gox-syntax/: Cargo.toml  README.md
crates/gox-syntax/src/: ast.rs  errors.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/gox-syntax/tests/: parser_integration.rs
crates/gox-target-native/: Cargo.toml
crates/gox-target-native/src/: lib.rs
crates/gox-target-sbf/: Cargo.toml
crates/gox-target-sbf/src/: lib.rs
crates/gox-target-wasm/: Cargo.toml
crates/gox-target-wasm/src/: lib.rs
crates/gox-tests/: Cargo.toml  README.md
crates/gox-tests/src/: lib.rs  main.rs  printer.rs  runner.rs
crates/gox-tests/test_data/: 16_object_type.gox  20_comprehensive.gox  channel_send.gox  clone_immediate_read.gox  closure.gox  complex_literal.gox  const_fold.gox  debug_clone.gox  debug_sequence.gox  embed_interface.gox  embed_interface_impl.gox  embed_method.gox  embed_pointer.gox  embed_shadow.gox  embed_struct.gox  field_offset_debug.gox  go_stmt.gox  init_call_error.gox  local_type.gox  method_dispatch_bug.gox  minimal_bug.gox  minimal_bug2.gox  multi_type_method.gox  nested_clone_test.gox  nested_struct_bug.gox  point_then_rect.gox  pointer_basic.gox  pointer_comprehensive.gox  range_string.gox  rect_only.gox  rect_only_sum.gox  setfield_getfield_test.gox  setfield_test.gox  simple_clone_test.gox  slice.gox  slice_map.gox  struct_method_simple.gox  struct_object.gox  switch_stmt.gox  type_debug.gox  (+2 more)
crates/gox-vm/: Cargo.toml  README.md
crates/gox-vm/src/: bytecode.rs  extern_fn.rs  ffi.rs  fiber.rs  gc.rs  instruction.rs  lib.rs  native.rs  objects.rs  scheduler.rs  types.rs  value.rs  vm.rs
crates/gox-vm/tests/: multithread.rs
crates/gox-web/: Cargo.toml
crates/gox-web/src/: lib.rs
crates/vo-analysis/: Cargo.toml
crates/vo-analysis/src/: arena.rs  constant.rs  display.rs  lib.rs  lookup.rs  obj.rs  operand.rs  package.rs  project.rs  query.rs  scope.rs  typ.rs  universe.rs
crates/vo-aot/: Cargo.toml
crates/vo-aot/src/: compiler.rs
crates/vo-cli/: Cargo.toml
crates/vo-cli/src/: bytecode_tests.rs  bytecode_text.rs  lib.rs  main.rs  printer.rs
crates/vo-codegen-cranelift-backup/: Cargo.toml
crates/vo-codegen-cranelift-backup/src/: context.rs  runtime.rs  translate.rs
crates/vo-codegen-vm-backup/: Cargo.toml
crates/vo-codegen-vm-backup/src/: expr.rs  func.rs  lib.rs  stmt.rs
crates/vo-common/: Cargo.toml  README.md
crates/vo-common-core/: Cargo.toml
crates/vo-common-core/src/: bytecode.rs  instruction.rs  lib.rs  runtime_type.rs  serialize.rs  symbol.rs  types.rs
crates/vo-common/src/: diagnostics.rs  lib.rs  source.rs  span.rs  symbol.rs  vfs.rs
crates/vo-jit/: Cargo.toml
crates/vo-jit-backup/: Cargo.toml
crates/vo-jit-backup/src/: func_compiler.rs  gc_tracking.rs  jit.rs  lib.rs  loop_analysis.rs  loop_compiler.rs  translate.rs  translator.rs
crates/vo-jit-backup/tests/: e2e.rs
crates/vo-jit/src/: compiler.rs  func_compiler.rs  lib.rs  loop_analysis.rs  loop_compiler.rs  manager.rs  translate.rs  translator.rs
crates/vo-module/: Cargo.toml
crates/vo-module/src/: error.rs  lib.rs  modfile.rs  resolver.rs  vfs.rs
crates/vo-runtime-core-backup/: Cargo.toml
crates/vo-runtime-core-backup/src/: gc.rs  gc_types.rs  lib.rs
(+4312 files in other folders)
