[workspace]
resolver = "2"
members = [
  "lang/crates/*",
  "lang/crates/vo-web/runtime-wasm",
  "libs/vox/rust",
  "libs/vogui/rust",
  "playground/rust",
  "studio/wasm",
  "cmd/vo",
  "cmd/vo-embed",
  "cmd/vo-test/rust",
]
exclude = [
  "3rdparty/git2/rust",
  "3rdparty/resvg/rust",
  "3rdparty/wgpu/rust",
  "studio/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# WASM-optimized release (size)
[profile.release]
opt-level = "s"
lto = true
strip = true
debug = false

# Native-optimized release (speed)
[profile.release-native]
inherits = "release"
opt-level = 3
lto = "thin"
debug-assertions = false
overflow-checks = false

# Release with debug symbols (for crash investigation)
[profile.release-dbg]
inherits = "release"
strip = false
debug = true
lto = false

# Release without LTO (for LTO crash isolation)
[profile.release-nolto]
inherits = "release"
lto = false

# Redirect 3rdparty crates that reference vo-lang crates via git URL to local paths.
# This prevents duplicate crate instances and type incompatibilities when a 3rdparty
# crate (e.g. vo-git2 with wasm-stubs feature) is used as a workspace path dependency.
[patch."https://github.com/vo-lang/volang"]
vo-runtime  = { path = "lang/crates/vo-runtime" }
vo-ext      = { path = "lang/crates/vo-ext" }
vo-ffi-macro = { path = "lang/crates/vo-ffi-macro" }
