[workspace]
resolver = "2"
members = [
  "lang/crates/*",
  "lang/crates/vo-web/runtime-wasm",
  "playground/rust",
  "cmd/vo",
  "cmd/vo-embed",
  "cmd/vo-test/rust",
]
exclude = [
  "3rdparty/git2/rust",
  "3rdparty/resvg/rust",
  "3rdparty/wgpu/rust",
  "studio/src-tauri",
  "lang/crates/vo-module-old",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"

# WASM-optimized release (size)
[profile.release]
opt-level = "s"
lto = true
strip = true
debug = false

[profile.release.package.vo-studio-wasm]
debug = true
strip = false

[profile.release.package.vo-test]
opt-level = 3
codegen-units = 1

# Native-optimized release (speed)
[profile.release-native]
inherits = "release"
opt-level = 3
lto = "thin"
debug-assertions = false
overflow-checks = false

# Release with debug symbols (for crash investigation)
[profile.release-dbg]
inherits = "release"
strip = false
debug = true
lto = false

# Release without LTO (for LTO crash isolation)
[profile.release-nolto]
inherits = "release"
lto = false

# Redirect crates that reference vo-lang repos via git URL to local paths.
# This prevents duplicate crate instances and type incompatibilities when
# sibling repos (vox, vogui) or 3rdparty crates are used alongside the workspace.
[patch."https://github.com/vo-lang/volang"]
vo-common    = { path = "lang/crates/vo-common" }
vo-engine    = { path = "lang/crates/vo-engine" }
vo-ext       = { path = "lang/crates/vo-ext" }
vo-ffi-macro = { path = "lang/crates/vo-ffi-macro" }
vo-module    = { path = "lang/crates/vo-module" }
vo-release   = { path = "lang/crates/vo-release" }
vo-runtime   = { path = "lang/crates/vo-runtime" }
vo-stdlib    = { path = "lang/crates/vo-stdlib" }
vo-syntax    = { path = "lang/crates/vo-syntax" }
vo-vm        = { path = "lang/crates/vo-vm" }
