[package]
name = "vo-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Volang engineering control-plane CLI"

[[bin]]
name = "vo-dev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
