[package]
name = "vo-dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Volang engineering control-plane CLI"
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "vo-dev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"
vo-engine = { path = "../../lang/crates/vo-engine", default-features = false }

[dev-dependencies]
vo-source-contract = { path = "../../lang/crates/vo-source-contract" }
