[package]
name = "vo-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Manifest-driven regression runner for the Vo toolchain"
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "vo-test"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vo-engine = { path = "../../lang/crates/vo-engine" }
