[package]
name = "gox-aot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AOT (Ahead-Of-Time) compilation for GoX using Cranelift"

[dependencies]
gox-common = { path = "../gox-common" }
gox-vm = { path = "../gox-vm" }
gox-runtime-native = { path = "../gox-runtime-native" }
gox-codegen-cranelift = { path = "../gox-codegen-cranelift" }

# Cranelift dependencies (only object for AOT output)
cranelift-codegen = "0.113"
cranelift-object = "0.113"
cranelift-native = "0.113"
cranelift-module = "0.113"

target-lexicon = "0.12"
anyhow = "1.0"

[dev-dependencies]
cranelift-jit = "0.113"
gox-syntax = { path = "../gox-syntax" }
gox-analysis = { path = "../gox-analysis" }
gox-codegen-vm = { path = "../gox-codegen-vm" }
