[package]
name = "gox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the GoX compiler"

[[bin]]
name = "gox"
path = "src/main.rs"

[dependencies]
gox-common = { path = "../gox-common" }
gox-syntax = { path = "../gox-syntax" }
gox-analysis = { path = "../gox-analysis" }
gox-codegen-vm = { path = "../gox-codegen-vm" }
gox-module = { path = "../gox-module" }
gox-vm = { path = "../gox-vm" }
gox-runtime-vm = { path = "../gox-runtime-vm" }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
