[package]
name = "gox-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JIT compilation backend for GoX using Cranelift"

[dependencies]
gox-common = { path = "../gox-common" }
gox-vm = { path = "../gox-vm" }
gox-runtime-native = { path = "../gox-runtime-native" }
gox-codegen-cranelift = { path = "../gox-codegen-cranelift" }

# Cranelift dependencies
cranelift-codegen = "0.113"
cranelift-jit = "0.113"
cranelift-native = "0.113"
cranelift-module = "0.113"

anyhow = "1.0"

[dev-dependencies]
gox-syntax = { path = "../gox-syntax" }
gox-analysis = { path = "../gox-analysis" }
gox-codegen-vm = { path = "../gox-codegen-vm" }
