[package]
name = "gox-runtime-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VM runtime implementation for GoX"

[features]
default = ["std"]
std = ["gox-vm/std", "dep:regex"]  # Include std packages (os, fmt, time, etc.)

[dependencies]
gox-common = { path = "../gox-common" }
gox-runtime-core = { path = "../gox-runtime-core" }
gox-vm = { path = "../gox-vm", default-features = false }
regex = { version = "1", optional = true }

[dev-dependencies]
