[package]
name = "gox-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lexer, AST definitions, and parser for the GoX programming language"

[dependencies]
gox-common = { path = "../gox-common" }
gox-common-core = { path = "../gox-common-core" }
thiserror = "1.0"
logos = "0.14"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "gox-common/serde"]

[dev-dependencies]
pretty_assertions = "1.4"
