[package]
name = "gox-target-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native executable compilation target for GoX"

[dependencies]
gox-common = { path = "../gox-common" }
gox-codegen-llvm = { path = "../gox-codegen-llvm" }
gox-runtime-core = { path = "../gox-runtime-core" }

[dev-dependencies]
