[package]
name = "gox-target-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly compilation target for GoX"

[dependencies]
gox-common = { path = "../gox-common" }
gox-codegen-llvm = { path = "../gox-codegen-llvm" }
gox-runtime-core = { path = "../gox-runtime-core" }

[dev-dependencies]
