[package]
name = "gox-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File-based integration tests for the GoX compiler"

[[bin]]
name = "gox-tests"
path = "src/main.rs"

[dependencies]
gox-common = { path = "../gox-common" }
gox-syntax = { path = "../gox-syntax" }
gox-analysis = { path = "../gox-analysis" }
gox-codegen-vm = { path = "../gox-codegen-vm" }
gox-vm = { path = "../gox-vm" }
gox-module = { path = "../gox-module" }
gox-cli = { path = "../gox-cli" }

[dev-dependencies]
