[package]
name = "gox-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Custom virtual machine runtime for GoX"

[features]
default = ["std"]
std = []  # Enable std features (bytecode loading from files, etc.)

[dependencies]
gox-common-core = { path = "../gox-common-core" }
hashbrown = "0.14"
indexmap = "2"

[dev-dependencies]
