[package]
name = "gox-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for GoX VM - run GoX in browsers"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std", "compiler"]
# Standard library support (enables source compilation)
std = [
    "gox-common",
    "gox-syntax",
    "gox-analysis",
    "gox-codegen-vm",
    "gox-runtime-vm",
    "console_error_panic_hook",
    "web-sys",
]
# Enable GoX source code compilation (requires std)
compiler = ["std"]
# Minimal: only bytecode execution, no_std compatible
# Use: cargo build --no-default-features

[dependencies]
# Core VM (always required, no_std compatible)
gox-vm = { path = "../gox-vm" }

# Optional: std-only dependencies
gox-common = { path = "../gox-common", optional = true }
gox-syntax = { path = "../gox-syntax", optional = true }
gox-analysis = { path = "../gox-analysis", optional = true }
gox-codegen-vm = { path = "../gox-codegen-vm", optional = true }
gox-runtime-vm = { path = "../gox-runtime-vm", optional = true }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Optional std dependencies
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
