[package]
name = "vo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the Vo compiler"

[features]
default = []
gc-debug = ["vo-runtime/gc-debug"]

[[bin]]
name = "vo"
path = "src/main.rs"

[dependencies]
vo-common = { path = "../vo-common" }
vo-runtime = { path = "../vo-runtime" }
vo-syntax = { path = "../vo-syntax" }
vo-analysis = { path = "../vo-analysis" }
vo-codegen = { path = "../vo-codegen" }
vo-module = { path = "../vo-module" }
vo-vm = { path = "../vo-vm", features = ["jit"] }
vo-runtime-native = { path = "../vo-runtime-native" }
vo-jit = { path = "../vo-jit" }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
