[package]
name = "vo-common-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for Vo (no_std compatible)"

[dependencies]
num_enum = { version = "0.7", default-features = false }
string-interner = { version = "0.17", optional = true }

[features]
default = ["std"]
std = ["string-interner"]
