[package]
name = "vo-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared infrastructure for the Vo compiler: source management, diagnostics, and symbols"

[dependencies]
vo-common-core = { path = "../vo-common-core" }
thiserror = "1.0"
codespan-reporting = "0.11"
string-interner = "0.17"
rustc-hash = "1.1"
termcolor = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
