[package]
name = "vo-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JIT compiler for Vo bytecode using Cranelift"

[dependencies]
vo-runtime = { path = "../vo-runtime" }
vo-common-core = { path = "../vo-common-core" }

# Cranelift JIT
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"

target-lexicon = "0.12"
